# redmine_cli

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  setup-hooks.sh
.claude/: settings.json
.claude/rules/: testing.md
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
src/: cli.rs  client.rs  config.rs  main.rs
src/commands/: config.rs  issues.rs  mod.rs  projects.rs  users.rs
src/models/: issue.rs  mod.rs  project.rs  user.rs
