[package]
name = "redmine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "redmine"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
